--- a/App Firebase/Manual Code/login social.html
+++ b/App Firebase/Manual Code/login social.html
@@ -279,7 +279,7 @@
         // Your web app's Firebase configuration
         // IMPORTANT: Replace with your actual Firebase project configuration!
         const firebaseConfig = {
-            apiKey: "AIzaSyCwED8ecLP9ig2QNmBUO_HAWiI9X2ujV0U",
+            apiKey: "API Key",
             authDomain: "narratum.firebaseapp.com",
             projectId: "narratum",
             storageBucket: "narratum.firebasestorage.app",
