--- a/App Firebase/MainFrontEnd/index.html
+++ b/App Firebase/MainFrontEnd/index.html
@@ -10,10 +10,10 @@
     <style>
       /* Custom Tailwind Configuration (optional, but good for fonts and shadows) */
       /* These styles are applied globally if this index.html is used. */
-      .font-['Lato'] {
+      .font-lato {
         font-family: 'Lato', sans-serif;
       }
-      .font-['Georgia'] {
+      .font-georgia {
         font-family: 'Georgia', serif;
       }
 
@@ -28,5 +28,6 @@
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="App v1.js"></script>
     </body>
 </html>
